--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,31 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.2"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
-    //Sleep activities
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.2"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.2"
+
+    //---------------------------------------------------------------------------------------
+    //1. Play Service: Activity recognition library
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    //2. Room components
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+    //TODO: ksp "androidx.room:room-compiler:2.4.3"
+    //OPTIONAL: Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.4.3"
+    //OPTIONAL: test helpers
+    testImplementation "androidx.room:room-testing:2.4.3"
+    //OPTIONAL: Paging 3 Integration
+    //implementation "androidx.room:room-paging:2.4.3"
+
+    //3. Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //4. Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 }
