--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,7 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    //TODO: hilt library use kapt annotation package which Kotlin no longer support it.
+    //TODO: Check for later compatibility of hilt and ksp
+    //TODO: id("com.google.dagger.hilt.android") version "2.44" apply false
 }
