--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.3.2'
+        compose_ui = '1.3.3'
+        compose_material3 = '1.0.1'
+        lifecycle_version = '2.5.1'
+        activity_version = '1.6.1'
+        room_version = '2.4.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    // * Primary: id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    // ! e: This version (1.3.2) of the Compose Compiler requires Kotlin version 1.7.20
+    //id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     //TODO: hilt library use kapt annotation package which Kotlin no longer support it.
     //TODO: Check for later compatibility of hilt and ksp
     //TODO: id("com.google.dagger.hilt.android") version "2.44" apply false
