--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     //id 'com.google.devtools.ksp' version "1.7.21-1.0.8"
     id 'com.google.devtools.ksp' version "1.7.21-1.0.8"
     //id 'com.google.devtools.ksp' version "1.8.0-1.0.8"
+    id 'com.google.dagger.hilt.android' version "2.44"
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -38,6 +40,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion "$compose_version"
@@ -57,6 +60,12 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui"
     implementation "androidx.compose.material3:material3:$compose_material3"
+    implementation "androidx.compose.material3:material3-window-size-class:$compose_material3"
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui"
@@ -75,7 +84,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    //Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$kotlinx_coroutines"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinx_coroutines"
+
+    //Dagger Hilt
+    implementation "com.google.dagger:hilt-android:$android_hilt_version"
+    ksp "com.google.dagger:hilt-android-compiler:$android_hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$androidx_hilt_version-alpha03"
+    implementation "androidx.hilt:hilt-navigation-compose:$androidx_hilt_version"
+    ksp "androidx.hilt:hilt-compiler:$androidx_hilt_version"
+
 
     //---------------------------------------------------------------------------------------
     //1. Play Service: Activity recognition library
@@ -94,10 +115,6 @@ dependencies {
 
     //3. Preferences DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    //4. Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-
 
 //    implementation 'com.google.devtools.ksp:symbol-processing-gradle-plugin:1.8.0-1.0.8'
 //    implementation 'com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.7.21-1.0.8'
