--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,27 @@
 buildscript {
     ext {
+        kotlinx_coroutines = '1.6.4'
         compose_version = '1.3.2'
         compose_ui = '1.3.3'
         compose_material3 = '1.0.1'
         lifecycle_version = '2.5.1'
         activity_version = '1.6.1'
-        room_version = '2.4.3'
+        room_version = '2.5.0'
+        android_hilt_version = '2.44'
+        androidx_hilt_version = '1.0.0'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
     // * Primary: id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     // ! e: This version (1.3.2) of the Compose Compiler requires Kotlin version 1.7.20
     //id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     //TODO: hilt library use kapt annotation package which Kotlin no longer support it.
     //TODO: Check for later compatibility of hilt and ksp
     //TODO: id("com.google.dagger.hilt.android") version "2.44" apply false
