--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         androidx_hilt_version = '1.0.0'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${android_hilt_version}"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
