--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,22 @@ buildscript {
         lifecycle_version = '2.5.1'
         activity_version = '1.6.1'
         room_version = '2.5.0'
-        android_hilt_version = '2.44'
+        android_hilt_version = '2.44.2'
         androidx_hilt_version = '1.0.0'
+        kotlin_version = '1.7.21'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:${android_hilt_version}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     // * Primary: id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     // ! e: This version (1.3.2) of the Compose Compiler requires Kotlin version 1.7.20
